--- a/css/design-system.css
+++ b/css/design-system.css
@@ -1,3 +1,5 @@
+@import "reset.css";
+
 :root {
   /* Colors */
   /* Primary */
@@ -8,7 +10,7 @@
     70%
   ); /* #A775F1 - HSL from image, matches HEX */
   --color-purple-500: hsl(263, 55%, 52%); /* #733FC8 */
-
+  --color-black: hsl(0, 0%, 7%);
   /* Neutral */
   --color-white: hsl(0, 0%, 100%); /* #FFFFFF */
   --color-grey-100: hsl(214, 17%, 92%); /* #E7EAEE */
@@ -22,6 +24,7 @@
   --font-weight-medium: 500;
   --font-weight-semibold: 600;
 
+  --box-shadow-main: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   --font-size-body: 13px;
 
   --space-50: 4px;
@@ -33,12 +36,15 @@
 }
 
 body {
+  display: grid;
+  place-content: center;
+  min-height: 100vh;
   font-family: var(--font-family-main);
   font-size: var(--font-size-body);
-  font-weight: var(--font-weight-medium); /* Default to medium */
-  /* Consider adding a base line-height and text color for the body */
-  /* line-height: 1.5; */
-  /* color: var(--color-grey-500); */
+  font-weight: var(--font-weight-medium);
+  line-height: 1.3;
+  color: var(--color-grey-400);
+  background-color: var(--color-grey-100);
 }
 
 .text-preset-1 {
