--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,46 @@
 @import "design-system.css";
+@import "reset.css";
+
+.testimonials-grid {
+  display: grid;
+  padding-block: 2rem;
+  width: min(95%, 70rem);
+  margin-inline: auto;
+}
+
+.testimonial {
+  padding: var(--space-400);
+  border-radius: var(--space-200);
+  box-shadow: var(--box-shadow-main);
+}
+
+.testimonial__profile {
+  display: flex;
+  gap: var(--space-200);
+}
+
+.testimonial__profile-image {
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  border: 2px solid var(--color-purple-300);
+}
+
+.testimonial__profile-name {
+}
+
+.testimonial__profile-status {
+  opacity: 0.7;
+  text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
+}
+
+.testimonial__content {
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-200);
+}
+.testimonial__heading {
+  margin-top: var(--space-200);
+}
+.testimonial__quote {
+}
